leptos_macro/tests/compiler_assumptions/01_ufcs_no_error_type.stderr
error[E0277]: custom: `bool` does not implement `Check`
  --> tests/compiler_assumptions/01_ufcs_no_error_type.rs:21:19
   |
21 |     let result = <bool as Check>::pass(val);
   |                   ^^^^ the trait `Check` is not implemented for `bool`
   |
help: this trait has no implementations, consider adding one
  --> tests/compiler_assumptions/01_ufcs_no_error_type.rs:13:1
   |
13 | trait Check {
   | ^^^^^^^^^^^

error[E0308]: mismatched types
  --> tests/compiler_assumptions/01_ufcs_no_error_type.rs:22:18
   |
22 |     needs_string(result);
   |     ------------ ^^^^^^ expected `String`, found `bool`
   |     |
   |     arguments to this function are incorrect
   |
note: function defined here
  --> tests/compiler_assumptions/01_ufcs_no_error_type.rs:17:4
   |
17 | fn needs_string(_: String) {}
   |    ^^^^^^^^^^^^ ---------
help: try using a conversion method
   |
22 |     needs_string(result.to_string());
   |                        ++++++++++++
